fix display issue in windows for calendar.

--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -5,10 +5,20 @@ calendar
         font-size: 1.5em!important
         max-width: 100%
         max-height: 100vh
+    .fc button
+        height: 30px
+        line-height: 10px
+        font-size: 0.7em
+    .fc-center
+        h2
+            font-size: 1em
+    .fc-toolbar.fc-header-toolbar
+        margin-bottom: 5px!important
     .fc-view
         width: 100%;
     .fc-view-container
         width: auto;
+        height: 100%
         overflow-y: auto;
     .fc-view-container .fc-view
         overflow-x: scroll;
