--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -20,8 +20,8 @@ calendar
         width: auto;
         height: 100%
         overflow-y: auto;
-    .fc-view-container .fc-view
-        overflow-x: scroll;
+    // .fc-view-container .fc-view
+    //     overflow-x: scroll;
     .fc-nonbusiness
         background: #383838!important
     // .fc-event-container
