--- a/client/src/core/orders/ordersForm/ordersForm.styl
+++ b/client/src/core/orders/ordersForm/ordersForm.styl
@@ -13,6 +13,11 @@
         h3
             margin: 0px
             margin-right: 20px
+    .schedule-at-date
+        margin-top 10px
+        h3
+            font-size: 1.5em
+            margin: 5px
 
     .current-order-text
         color: #ff7a7a
