--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -5,6 +5,25 @@ calendar
         font-size: 1.5em!important
         max-width: 100%
         max-height: 100vh
+    #view-order
+        // min-height: 100px
+        min-width: 200px
+        position: fixed;
+        bottom: 5px
+        right: 5px
+        background: #ffffff
+        opacity: 0.7
+        border: 1px solid black
+        z-index: 200
+        .collapse-button
+            border-bottom: 1px solid black
+            margin-bottom: 5px
+            .md-button
+                line-height: 20px
+                min-height: 20px
+        .info
+            font-size: 1.1em
+            font-weight: bold;
     .fc button
         height: 30px
         line-height: 10px
