--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -39,6 +39,11 @@ calendar
         width: auto;
         height: 100%
         overflow-y: auto;
+    .fc-event-container
+        width: auto;
+        max-height: 500px
+        overflow-y: auto;
+
     // .fc-view-container .fc-view
     //     overflow-x: scroll;
     .fc-nonbusiness
