--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -39,10 +39,13 @@ calendar
         width: auto;
         height: 100%
         overflow-y: auto;
-    .fc-event-container
-        width: auto;
-        max-height: 500px
-        overflow-y: auto;
+    .fc-month-view
+        .fc-event-container
+            width: auto;
+            max-height: 350px
+            overflow-y: auto;
+            .fc-day-grid-event
+                margin-bottom: 10px
 
     // .fc-view-container .fc-view
     //     overflow-x: scroll;
