change client form #35

--- a/client/src/client/customersForm.1/customersForm.styl
+++ b/client/src/client/customersForm.1/customersForm.styl
@@ -6,11 +6,11 @@ client-customers-form
         font-size: 1.5em
         padding-left: 50px
         padding-right: 50px
-    md-input-container
-        label
-            font-size: 1.5em
-        .md-input
-            margin-top: 20px
+    // md-input-container
+    //     label
+    //         font-size: 2em
+    //     .md-input
+    //         margin-top: 20px
 
     .review
         p
