--- a/client/src/core/Calendar/Calendar.styl
+++ b/client/src/core/Calendar/Calendar.styl
@@ -7,14 +7,15 @@ calendar
         max-height: 100vh
     #view-order
         // min-height: 100px
-        min-width: 200px
+        min-width: 250px
         position: fixed;
         bottom: 5px
         right: 5px
         background: #ffffff
-        opacity: 0.7
+        opacity: 0.85
         border: 1px solid black
         z-index: 200
+        font-size: 1.3em
         .collapse-button
             border-bottom: 1px solid black
             margin-bottom: 5px
